Added basic structure for update process

--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   "author": {
     "name": "nazhrenn",
     "email": "shidobu@gmail.com"
+  },
+  "dependencies": {
+    "minimist": "^1.2.0"
   }
 }
